fixed layout issues and mismatch

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -24,6 +24,10 @@ html {
   font-size: 62.5%;
 }
 
+img {
+  width: 100%;
+}
+
 body {
   font-family: Inter, Arial, Helvetica, sans-serif;
   color: var(--color-body);
@@ -35,12 +39,12 @@ h1,
 h2,
 h3 {
   color: var(--color-headings);
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   line-height: 1.1;
 }
 
 h1 {
-  font-size: 7 rem;
+  font-size: 6rem;
 }
 
 h2 {
@@ -48,8 +52,9 @@ h2 {
 }
 
 h3 {
-  font-size: 3rem;
-  font-weight: 500;
+  font-size: 2.8rem;
+  font-weight: 600;
+  line-height: 1.3;
 }
 
 p {
@@ -87,11 +92,11 @@ a {
 .link-arrow::after {
   content: "-->";
   margin-left: 5px;
+  transition: margin 0.15s;
 }
 
 .link-arrow:hover::after {
   margin-left: 10px;
-  transition: margin 0.15s;
 }
 
 @media screen and (min-width: 1024px) {
@@ -199,7 +204,7 @@ a {
   font-weight: 600;
   border: 0;
   border-radius: 40px;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-transform: uppercase;
   cursor: pointer;
   white-space: nowrap;
@@ -230,7 +235,7 @@ a {
 }
 
 .btn--secondary:hover {
-  background: #00c8eb;
+  background: #05cdf0;
 }
 .btn--accent {
   background: var(--color-accent);
@@ -292,6 +297,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 .input-group .btn {
   margin: 4px;
@@ -345,11 +351,11 @@ a {
 }
 
 .plan__price {
-  font-size: 6rem;
+  font-size: 5rem;
 }
 
 .plan__billing-cycle {
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: 300;
   opacity: 0.8;
   margin-right: 1rem;
@@ -364,9 +370,6 @@ a {
 
 .plan .list__item {
   margin-bottom: 2rem;
-}
-.plan--popular {
-  transform: scale(1.1);
 }
 
 .plan--popular .card__header {
@@ -390,6 +393,9 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+  .plan--popular {
+    transform: scale(1.1);
+  }
   .plan__name {
     font-size: 1.4rem;
   }
@@ -442,16 +448,16 @@ a {
 }
 
 .quote__author {
-  font-size: 3rem;
+  font-size: 2rem;
+  font-weight: 500;
   font-style: normal;
-  font-weight: 600;
   margin-bottom: 0;
 }
 
 .quote__company {
   color: var(--color-headings);
   opacity: 0.4;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-style: normal;
 }
 .quote__line {
@@ -594,17 +600,17 @@ a {
 
 /*blocks*/
 .block {
-  --padding-vertical: 6rem;
+  --padding-vertical: 5rem;
   padding: var(--padding-vertical) 2rem;
 }
 
 .block--skewed-right {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);
   padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
 .block--skewed-left {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
   padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
@@ -639,7 +645,7 @@ a {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 0 1rem;
+  padding: 1rem;
   align-items: center;
 }
 
@@ -651,6 +657,10 @@ a {
 .nav__item {
   padding: 0.5rem 2rem;
   border-bottom: 1px solid #222;
+}
+
+.nav__item:last-of-type {
+  border-bottom: none;
 }
 
 .nav__item > a {
@@ -676,6 +686,7 @@ a {
 
 .nav__brand {
   transform: translateY(5px);
+  width: 150px;
 }
 
 @media screen and (min-width: 768px) {
@@ -710,16 +721,20 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-  .hero {
-    padding-top: 0;
-  }
   .hero__content {
     text-align: left;
     align-self: center;
   }
 }
 
-/*Domain block*/
+@media screen and (min-width: 1024px) {
+  .hero {
+    padding-top: 0;
+  }
+}
+
+/* Domain Block */
+
 .block-domain .input-group {
   box-shadow: 0 0 30px 20px #e6ebee;
   border: 0;
@@ -729,13 +744,14 @@ a {
 
 .block-domain__prices {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
   justify-items: center;
   max-width: 700px;
   margin: 0 auto;
+  color: var(--color-headings);
 }
 
 @media screen and (min-width: 768px) {
@@ -786,7 +802,7 @@ a {
 @media screen and (min-width: 768px) {
   .block-showcase .grid {
     grid-template-columns: 50% 50%;
-    gap: 2rem 2rem;
+    grid-column-gap: 2rem;
   }
 
   .block-showcase__image {
@@ -796,12 +812,14 @@ a {
   .block-showcase__image > img {
     width: auto;
     max-width: 700px;
+    border-radius: 2rem;
   }
 }
 
 /*footer*/
 .footer {
   background: #232323;
+  padding-top: 10rem;
 }
 
 .footer__Section {
@@ -812,6 +830,8 @@ a {
 .footer__heading {
   text-transform: uppercase;
   font-weight: 600;
+  font-size: 2.5rem;
+  line-height: 1.5;
 }
 
 .footer__brand {
@@ -842,6 +862,9 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+  .footer {
+    font-size: 1.5rem;
+  }
   .footer__sections {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
